--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -1,3 +1,12 @@
-h1 {
-    color: blue;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.root {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
